--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,6 @@
     <string name="error_message">
         Failed to get results. Please try again.
     </string>
+    <string name="desc">Movie Poster Image</string>
 
 </resources>
