--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,5 +8,6 @@
     <string name="desc">Movie Poster Image</string>
     <string name="review">Reviews</string>
     <string name="content">Content</string>
+    <string name="favorite_movies">Favorite Movies</string>
 
 </resources>
